Add domain to auth cookie

--- a/conf/sample.toml
+++ b/conf/sample.toml
@@ -4,8 +4,9 @@ port = 3000
 
 [auth]
 cookiePassword = COOKIE_PASSWORD
+# cookieDomain = "baod.io"
 sessionTimeout = 24
-isSecure       = false
+isSecure = false
 
 [admin]
 portIndex = 0
